--- a/storage-service/src/test/java/com/github/advancedsecurity/test.properties
+++ b/storage-service/src/test/java/com/github/advancedsecurity/test.properties
@@ -1,2 +1,2 @@
-AWS_ACCESS_KEY_ID="AKIACIIEGKDEOAN7LYY7"
-AWS_SECRET_ACCESS_KEY="BoVNB=3Ear3q4u3t4ez6i8rN5/ZJZtJDscCPIHGG"
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
